fix: probleme de background

--- a/src/style.css
+++ b/src/style.css
@@ -256,7 +256,6 @@ button:focus {
 .home-section {
   position: relative;
   z-index: -1;
-  background-image: var(--image-gradient), url(./Assets/home-bg.png);
   background-size: contain;
   background-position: top center;
   background-repeat: no-repeat;
@@ -334,7 +333,7 @@ button:focus {
 .home-about-body {
   padding-top: 50px;
   font-size: 1.2em !important;
-  text-align: left;
+  text-align: justify;
 }
 
 .home-about-social {
@@ -449,7 +448,6 @@ button:focus {
   position: relative !important;
   padding-top: 150px !important;
   padding-bottom: 30px !important;
-  background-image: var(--section-background-color) !important;
 }
 
 .project-card {
