--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #00DEE0;
 }
 
 @keyframes App-logo-spin {
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+@font-face {
+  font-family: 'Espace';
+  src: url('Assets/fonts/Espace.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
